<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SolarSport</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrar</string>
    <string name="categories">Categorías</string>
    <string name="statistics">Estadísticas</string>
    <string name="benefits">Beneficios</string>
    <string name="energy_produced">Energía Producida (kWh)</string>
    <string name="savings">Valor Ahorrado (COP)</string>
    <string name="month">Mes</string>
    <string name="submit">Registrar</string>
    <string name="stadiums">Estadios</string>
    <string name="gyms">Gimnasios</string>
    <string name="tracks">Pistas</string>
    <string name="average_energy">Promedio de Energía Producida:</string>
    <string name="max_energy">Máxima Energía Producida:</string>
    <string name="min_energy">Mínima Energía Producida:</string>
    <string name="benefits_details">Detalles de los Beneficios:</string>
    <string name="benefitsText1">One of the reasons many businesses and homeowners are switching to solar is due to the positive economic benefit it has for local communities. </string>
    <string name="benefitsText2">Investing in solar energy can significantly reduce the amount  you pay each month for your utility bills. </string>
    <string name="benefitsText3">Solar Energy is Better for the Environment</string>
    <string name="benefitsText4">Collecting fossil fuels for electricity is responsible for damage to certain local ecosystems. Many plants and animals suffer, as habitats are destroyed and flora is removed to create space for energy operations such as drilling infrastructure.</string>
    <string name="benefitsText5">This month you have saved 60 kWh</string>

    <string-array name="roles">
        <item>Sports Complex Administrator</item>
        <item>Sustainability Manager</item>
        <item>Chief Financial Officer (CFO)</item>
        <item>Maintenance Technician</item>
        <item>Sport Events Coordinator</item>
    </string-array>
</resources>

